--- a/css/product.css
+++ b/css/product.css
@@ -5,9 +5,10 @@
 .thumbnail {
   max-width: 200px;
   width: 100%;
-  border-radius: 10px;
+  border-radius: 20px;
   background-size: cover;
   background-position: center;
+   border-radius: 70%;
 }
 .product .price {
   font-size: 16px;
