--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -260,18 +260,19 @@ sup {
 }
 
 a {
-  color: #ffc800;
-  text-decoration: underline;
+  color: black;
+  text-decoration: none;
 }
+
 a:hover {
   color: #cca000;
 }
-
+/*
 a:not([href]):not([class]),
 a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
-}
+}*/
 
 pre,
 code,
