--- a/css/product.css
+++ b/css/product.css
@@ -1,26 +1,34 @@
 .product {
   display: flex;
   padding: 10px;
+  text-decoration: none; /* 링크의 밑줄 제거 */
+  color: inherit; /* 링크의 색상 제거 */
 }
+
 .thumbnail {
   max-width: 200px;
   width: 100%;
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-   border-radius: 70%;
 }
+
+.product {
+  margin: 10px;
+  border: 0.5px solid gray;
+  border-radius: 10px;
+}
+
 .product .price {
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 600;
 }
 .product .title {
-  font-size: 17px;
   font-weight: 600;
 }
 .product .date {
   color: grey;
-  font-size: 13px;
+  font-size: 15px;
 }
 
 *{
