--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -265,14 +265,14 @@ a {
 }
 
 a:hover {
-  color: #cca000;
+  color: gray;
 }
-/*
+
 a:not([href]):not([class]),
 a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
-}*/
+}
 
 pre,
 code,
